[package]
name = "bs3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = "0.4.14"
ciborium = { version = "0.1.0", optional = true, default-features = false }
serde = { version = "1.0.130", features = ["derive", "alloc"], optional = true }

# dependency for seld.
sled = { version = "0.34", optional = true }

[features]
default = ["cbor", "nightly"]

# feature for std usage.
std = []
nightly = []

# Define backend.
sled-backend = ["sled", "std", "cbor"]

cbor = ["ciborium","serde"]

[dev-dependencies]
env_logger = "0.9.0"

[[example]]
name = "sled_test"
required-features = ["sled-backend"]