[package]
name = "bs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = "0.4.14"
ciborium = { version = "0.1.0", default-features = false, optional = true }
serde = { version = "1.0.130", features = ["derive", "alloc"], optional = true }
rand = "0.8"

# dependency for seld.
sled = { version = "0.34", features = ["compression"], optional = true }
digest = "0.9.0"

[features]
default = ["cbor", "nightly"]
compress = []

# feature for std usage.
std = []
nightly = []

# Define backend.
sled-backend = ["sled", "std", "cbor"]

cbor = ["ciborium","serde"]

[dev-dependencies]
env_logger = "0.9.0"
sha3 = "0.9.1"

[[test]]
name = "sled_test"
required-features = ["sled-backend"]

[[test]]
name = "merkle_test"
required-features = ["std"]
